# STT-WinUI3

./: .gitattributes  .gitignore  Directory.Build.props  README.md  Stt.sln  Stt.slnx
docs/native/: SETUP.md  audio-capture.md  execution-providers.md  kaldi-native-fbank.md
docs/superpowers/plans/: 2026-06-28-local-stt-engine.md
docs/superpowers/specs/: 2026-06-28-local-stt-engine-design.md
native/shim/: CMakeLists.txt  kaldi_native_fbank_shim.cc
scripts/: gen_golden_features.py
src/Stt.Abstractions/: Stt.Abstractions.csproj
src/Stt.Abstractions/Audio/: AudioFrame.cs  IAudioCapture.cs  SpeechSegment.cs
src/Stt.Abstractions/Common/: IUiDispatcher.cs
src/Stt.Abstractions/Decoders/: AsrResult.cs  DecoderCapabilities.cs  DecoderType.cs  IAsrDecoder.cs
src/Stt.Abstractions/Ep/: EpKind.cs  EpPreference.cs
src/Stt.Abstractions/Features/: AsrFeatureFamily.cs  IFeatureFrontend.cs
src/Stt.Abstractions/Models/: IModelRegistry.cs  ModelManifest.cs
src/Stt.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Stt.App.csproj  app.manifest
src/Stt.Audio.Windows/: Stt.Audio.Windows.csproj  WasapiAudioCapture.cs
src/Stt.Core/: Stt.Core.csproj
src/Stt.Core/Audio/: WavIo.cs  (+4 more)
src/Stt.Plugins.WhisperGenAi/: Stt.Plugins.WhisperGenAi.csproj  WhisperGenAiDecoder.cs
tests/Stt.Core.Tests/: Stt.Core.Tests.csproj  ToolchainSmokeTest.cs
tests/Stt.Pipeline.Tests/: BackpressureTests.cs  EndpointDetectorTests.cs  OfflinePipelineTests.cs  Stt.Pipeline.Tests.csproj  TwoPassPipelineTests.cs
tests/golden/: README.md  featsWhisper.shape
(+102 files in other folders)
